修改部分功能

--- a/views/frontsite/search.ejs
+++ b/views/frontsite/search.ejs
@@ -1,4 +1,4 @@
-<% layout('layout') %>
+<% layout('../layouts/main') %>
 <form action="/searchList" method="POST">
     <input type="text" name="search" value="">
     <input type="submit" value="送出">
