--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
     <meta charset="UTF-8">
     <title>test</title>
+    <%-stylesheets%>
 </head>
+
 <body>
-   <%- body %>
+    <%- body %>
+    <%-scripts%>
 </body>
 </html>
